Read and made corrections/addition to our_system.tex

--- a/4sprint/our_system.tex
+++ b/4sprint/our_system.tex
@@ -1,8 +1,7 @@
-\section{The Future of Our Tracking System}\label{sec:futureSystem}
-As described in \cref{sec:ourSys} we have been working on building our own tracking system, we did however not finish this as we encountered a significant difficulty. The obstacle we encountered was not being able to get the RSSI, and thus not making it possible for us to make further progress on our system within the remaining time limit. We do however believe it would be a fitting and interesting task for future developers.
+\section{The Future of Our IPS}\label{sec:futureSystem}
+As described in \cref{sec:ourSys} we have been working on building our own tracking system. However, it was not possible for us to finish it as we encountered a significant difficulty. The obstacle we encountered was not being able to acquire the RSSI, and thus making it impossible for us to make further serious progress on our system within the remaining time limit. We do however believe it would be a fitting and interesting task for future developers.
 
-The first step in future development should be to become able to get the RSSI from at least devises connected to the network. Thereafter the data from multiple access points should be received which leads to the next step. Following this there should be put in an effort to calculate a distance away form each access point based on the signal strength and to utilize one of the methods for calculating the position of devices, as described in \cref{sec:tracking_approach}. By making these features it would be possible to locate devices on the network, which we believe would be a large part of making the full system.
+The first step, if someone where to furtherer develop the system, should be to acquire the RSSI for the devices that are connected to the network. The next step should be to expand the range of attainable devices by allowing multiple access points. From there is should be possible to calculate the distance between each access point based on the signal strength. This calculation can be performed by utilising one of the methods described in \cref{sec:tracking_approach}. By implementing these features it would be possible to locate the positions of devices on the network, which we believe would be a crucial component of creating the system.
 
-Having the described features would make a usable locations system, that however does not mean there is no more to be done on the system. Additionally the system could be expanded to receive the signal strength for all devices within the networks perimeter, connected or not. This would allow for the system to track everyone within the systems coverage and thereby giving it a more accurate coverage of the area of usage.
-Also there could be looked into calculating the accuracy of each location, as Cisco does it. What Cisco does is that it gives some radius in feet with a confidence factor of $95\%$, meaning it is $95\%$ sustain the device is within the given radius\cite{cisco_acc}. 
-
+If the described features were implemented, a set of secondary functionality could be considered. The system could be expanded to receive the signal strength for all devices within the networks perimeter, connected or not. This would allow the system to track everyone within its coverage and thereby give it a more accurate overview of the area.
+It would be beneficial if the system could calculate an estimate of how likely it is that the found locations are correct. This estimate could be similar to what MSE provides with its \textit{confidenceFactor} described in \cref{sec:class_design}. This estimate will be useful for comparing the system's precision with other systems as descried in \cref{sec:ourSys}.
