Another small correction to my own correction

--- a/4sprint/our_system.tex
+++ b/4sprint/our_system.tex
@@ -4,4 +4,4 @@ As described in \cref{sec:ourSys} we have been working on building our own track
 The first step, if someone where to furtherer develop the system, should be to acquire the RSSI for the devices that are connected to the network. The next step should be to expand the range of attainable devices by allowing multiple access points. From there is should be possible to calculate the distance between each access point based on the signal strength. This calculation can be performed by utilising one of the methods described in \cref{sec:tracking_approach}. By implementing these features it would be possible to locate the positions of devices on the network, which we believe would be a crucial component of creating the system.
 
 If the described features were implemented, a set of secondary functionality could be considered. The system could be expanded to receive the signal strength for all devices within the networks perimeter, connected or not. This would allow the system to track everyone within its coverage and thereby give it a more accurate overview of the area.
-It would be beneficial if the system could calculate an estimate of how likely it is that the found locations are correct. This estimate could be similar to what MSE provides with its \textit{confidenceFactor} described in \cref{sec:class_design}. This estimate will be useful for comparing the system's precision with other systems as descried in \cref{sec:ourSys}.
+Another beneficial feature the system could support, could be to calculate an estimate of how likely it is that the found locations are correct. This estimate could be similar to what MSE provides with its \textit{confidenceFactor} described in \cref{sec:class_design}. This estimate will be useful for comparing the system's precision with other systems as descried in \cref{sec:ourSys}.
