New files for the experience chapter

--- a/experience/experience.tex
+++ b/experience/experience.tex
@@ -1,5 +1,6 @@
 \chapter{Experience}
-
-A chapter documenting the experiences gained from working in a multi-project. Reflections and knowledge to be passed on to future students.
-
-Summary, Reflections, suggestions for next year students
+%A chapter documenting the experiences gained from working in a multi-project. Reflections and knowledge to be passed on to future students.
+%Summary, Reflections, suggestions for next year students
+\input{experience/multi_project}
+\input{experience/summary}
+\input{experience/reflection}
