Wrote a little in multi_project.tex. I aso moved catch_up to the experience chapter

--- a/experience/multi_project.tex
+++ b/experience/multi_project.tex
@@ -1,2 +1,16 @@
 \section{Working in a Multi-Project}
+When working in a multi-project there is a set of nw challenges compared to working in the traditional format which we are used too.
+%TODO der skal nook være lidt mere intro her
 
+\subsection{Organisation}
+% Hordan er tingene blevet organiseret? De forskellige former for møder, slack, issues[gitlab], repoes 
+When working with a large group of people it is necessary to enforce an organisational structure in order to efficiently establish an overview of the project. We need to know far the different groups are with their separate parts of the project and what kind of problems they are facing. If one group cannot make any serious progress because of some kind of hindrance, it is important that the other groups are notified, in case that they are depending on their work. We found the wast majority of these problems, by organising what resembles a Scrum stand up meeting, at the supergroup meetings where everyone reported their individual group status'. If a group had a problem they were not themselves able to sort out, they would be able to draw help from the other groups, or move some of their tasks to other groups which would accept them. It should be noted that it was only project wide tasks that could be transferred. Such tasks could be updating the GitLab server or implementing a logging system.
+
+In order to 
+
+\subsection{Working Environment}
+% Hvordan sørger mna for at holde et godt arbejdsmijø? Konflikthåndtering, møder(brydder ind), ansvar
+
+
+\subsection{Overall Opinion}
+% Konklussion? 
