--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -1,7 +1,6 @@
 \chapter{Sprint 4}
-This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3 and improved the overall code standard, it includes hashing password and mac-addresses and enabling HTTPS on our server. Additionally a section will be made dedicate to future developer of aSTEP, to make it easier to get up to speed.
+This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3 and improved the overall code standard, it includes hashing password and mac-addresses and enabling HTTPS on our server. %Additionally a section will be made dedicate to future developer of aSTEP, to make it easier to get up to speed.
 
-\input{4sprint/catch_up}
 \input{4sprint/our_server}
 \input{4sprint/our_system}
 \input{4sprint/pers_server}
