--- a/bib.bib
+++ b/bib.bib
@@ -393,3 +393,10 @@
 	note = {Accessed 12-5-2016},
 	url ={http://www.cisco.com/c/en/us/support/docs/wireless/context-aware-software/110836-cas-faq.html}
 }
+
+@MISC{restful_in_java,
+	author = {Oracle Corporation},
+	title = {RESTful Web Services in Java},
+	note = {Accessed 16-5-2016},
+	url ={https://jersey.java.net/}
+}
