--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -1,7 +1,8 @@
 \chapter{Sprint 3}\label{cha:sprint3}
-This sprint aims to explore the possibilities of building our own tracking system as well as updating the restful intermediate service. Furthermore, we will examine our systems in regards to the aspect of security.
-\input{3sprint/trackingsystem}
+This sprint aims to explore the possibilities of building our own tracking system as well as updating the restful intermediate service to support the needed functionality described in \cref{sec:s2_eval}. Furthermore, we will examine our systems in regards to the aspect of security.
+
 \input{3sprint/update_rest}
+\input{3sprint/trackingsystem}
 \input{3sprint/security}
 
 \section{Sprint Evaluation}
