--- a/3sprint/security.tex
+++ b/3sprint/security.tex
@@ -3,7 +3,7 @@ In order to increase the level of security in our system, different consideratio
 
 \subsection*{HTTPS} 
 %  HTTPS and SSL certificate. May want to talk more about where we could use it in our system
-The system currently uses HTTP, an insecure communication protocol that uses cleartext to communicate. Anybody intercepting the communication can read it with ease. We can diminish the damage from this type of attack by using the HTTPS protocol, short for \textit{Hyper Text Transfer Protocol Secure}, which functions as the HTTP protocol with the exception that the message is encrypted. This means that if someone were to gain access to the connection they would not be able to read the information. A secure connection is very important on sites that handle sensitive information such as CPR-numbers or credit card data and this can be achieved by using the HTTPS protocol\cite{HTTPS}.
+The system currently uses HTTP, an insecure communication protocol that uses cleartext to communicate. Anybody intercepting the communication can read it with ease. We can diminish the damage from this type of attack by using the HTTPS protocol, short for \textit{Hyper Text Transfer Protocol Secure}, which functions as the HTTP protocol with the exception that the message is encrypted. This means that if someone were to gain access to the connection they would not be able to read the information. A secure connection is very important on sites that handle sensitive information such as CPR-numbers or credit card data and this can be achieved by using the HTTPS protocol \cite{HTTPS}.
 
 \begin{figure}[ht]
 	\begin{center}
@@ -13,7 +13,7 @@ The system currently uses HTTP, an insecure communication protocol that uses cle
 	\end{center} 
 \end{figure}
 
-\Cref{fig:HTTPS} shows how an app sends data to aSTEP server via the HTTPS protocol. First the app retrieves the aSTEP's public key from aSTEP, which is then used to encrypt the data that is going to be transferred to aSTEP. When aSTEP receives the data, the private key is used to decrypt the data, which can then be read as plain text. Additionally, if aSTEP needs to send data back to the app, it will need the apps public key to encrypt the message and the app will use its own private key to decrypt the data. This sum up the basics of HTTPS\cite{HTTPS}.
+\Cref{fig:HTTPS} shows how an app sends data to aSTEP server via the HTTPS protocol. First the app retrieves the aSTEP's public key from aSTEP, which is then used to encrypt the data that is going to be transferred to aSTEP. When aSTEP receives the data, the private key is used to decrypt the data, which can then be read as plain text. Additionally, if aSTEP needs to send data back to the app, it will need the apps public key to encrypt the message and the app will use its own private key to decrypt the data \cite{HTTPS}.
 
 \subsection*{Certificates}
 Certificates are used when communicating over the HTTPS protocol as a way to ensure the identity of a website as well as hand out the public key and encyption method. Once a certificate for a website is downloaded to a computer, the identity of the website can be verified against this certificate on following visits. All communication with MSE happens with the HTTPS protcol, and as such we have to consider how we treat certificates. 
@@ -23,7 +23,7 @@ Initially we created an empty certificate-handler which is still in use. This me
 \subsection*{Hashing}
 Hash functions are most commonly used to store a users password or other sensitive data. It functions as a one way mapping; when a message is hashed it can not be reversed again. The formal definition is shown below:
 \begin{quote}
-\textit{'A hash function is a computationally efficient function mapping binary strings of arbitrary length to binary strings of some fixed length, called hash-values.'\cite{Hash_def}}
+\textit{'A hash function is a computationally efficient function mapping binary strings of arbitrary length to binary strings of some fixed length, called hash-values.' \cite{Hash_def}}
 \end{quote}
 
 It has been requested by the Heatmap application group to have a unique identification of all people. As we are not allowed to store the MAC address, a solution to this would be to hash the MAC address with a random, changing salt. In this way it will be possible for the application to track people for as long as the salt-value is unchanged.
@@ -49,4 +49,4 @@ As of now many parts of the system has a higher degree of visibility than necess
 \subsection*{Obfuscating Personal Information}
 In order to ensure our users personal information, we decided to obfuscate the e-mail addresses. By doing so there will be no way for outsiders to identify people unwilling to have their information stored.
 
-IP addresses are not considered personal information. This is based on the fact that the address changes each time you change access point. By not obfuscating the IP, applications will be able to see how many people are connected to a given access point. This can be done by identifying the first 16 bits for IPv4 or the first 48 bits for IPv6, also known as the netbits\cite{IPnetworkID}.
+IP addresses are not considered personal information. This is based on the fact that the address changes each time you change access point. By not obfuscating the IP, applications will be able to see how many people are connected to a given access point. This can be done by identifying the first 16 bits for IPv4 or the first 48 bits for IPv6, also known as the netbits \cite{IPnetworkID}.
