--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -1,18 +1,18 @@
 \chapter{Introduction}
 In this day and age people are using most of their time indoor. This includes whether they are at home or at work where they are doing their daily activities in locations they are familiar with. However, people will from time to time move outside of the places familiar to them, as they might have to shop at a new mall or travel abroad. This can be a negative experience if they do not know how to navigate to their desired destination.
 
-The navigation distress is further enhanced by the fact that people spend 87\% of their time in buildings\cite{klepeis2001national} and with the topology of buildings becoming increasingly more complex, it is easy to get lost. This suggests that there is an increased need for indoor location systems as they can be used to create navigation services such as pathfinding programs and interactive maps. %fuck dig Anders hvis du ændrer det - Simon
+The navigation distress is further enhanced by the fact that people spend 87\% of their time in buildings \cite{klepeis2001national} and with the topology of buildings becoming increasingly more complex, it is easy to get lost. This suggests that there is an increased need for indoor location systems as they can be used to create navigation services such as pathfinding programs and interactive maps. %fuck dig Anders hvis du ændrer det - Simon
 
-Don Dodge, developer evangelist at Google, has in his blog \textit{The Next Big Thing} stated that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
+Don Dodge, developer evangelist at Google, has in his blog \textit{The Next Big Thing} stated that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years \cite{DonDIndoorIsNext}.
 \begin{quotation}
-	\textit{'...the most exciting innovation on the horizon.'}\cite{DonDNextBigThing}.
+	\textit{'...the most exciting innovation on the horizon.'} \cite{DonDNextBigThing}.
 \end{quotation}
-Google have already invested time and money into indoor positioning systems as they have developed Google Maps which since 2013 have supported indoor spaces\cite{google_indoor}. As of 2016, several indoor locations in Denmark is supported by this technology, some of these places are the Copenhagen Airport, Lyngby Storcenter and The National Museum\cite{google_dk}.
+Google have already invested time and money into indoor positioning systems as they have developed Google Maps which since 2013 have supported indoor spaces \cite{google_indoor}. As of 2016, several indoor locations in Denmark is supported by this technology, some of these places are the Copenhagen Airport, Lyngby Storcenter and The National Museum \cite{google_dk}.
 
 It is not only individuals that can make use of these services. For large indoor events, such as concerts and trade fairs, it can be useful for the administrators and authorities to have information on crowd density and movement. This can be used to create dynamic emergency plans or navigating medical staff around the most crowded areas to reach an individual in need of medical attention.
 
-This project focuses on indoor tracking in regards to collecting data and is part of the larger aSTEP multi-project. aSTEP is short for Aau's Spatio-TEmporal data management Platform for the mobile web, and is intended to be a location based framework for mobile applications. The system will have a database containing information about users and their current and historical location, and it will be possible for applications to request this data.
+This project focuses on indoor tracking in regards to collecting data and is part of the larger aSTEP multi-project. aSTEP is short for Aau's Spatio-TEmporal data management Platform for the mobile web, and is intended to be a location based framework for mobile applications. The system will have a database containing information about users and their current and historical locations, and it will be possible for applications to request this data.
 
-The project is built by 10 small groups of 4 people, each group responsible for a small segment of the whole project. The different areas are: User Management (UM), Database (DB), Indoor Location Based Service (ILBS), Outdoor Location Based Service (OLBS) and applications that going to use the framework. Two groups have been assigned to work on the ILBS area, we are one of the two.
+The multi-project is built by 10 small groups of 4 people, each group responsible for a small segment of the whole multi-project. The different areas are: User Management (UM), Database (DB), Indoor Location Based Service (ILBS), Outdoor Location Based Service (OLBS) and applications that going to use the framework. Two groups have been assigned to work on the ILBS area, we are one of the two.
 
 The ILBS groups are tasked with retrieving indoor location information, ideally from as many people as possible, and transferring this information to a database. In extension to this we also look into the possibility of building an indoor tracking system from scratch.
