--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -8,7 +8,8 @@ This sprint aims to explore the possibilities of building our own tracking syste
 \section{Sprint Evaluation}
 To perform an evaluation of the sprint we iterate over the sprint goals and comment on whether or not they were fulfilled.
 
-During this sprint we examined the possibility of building a small tracking system utilising access points. The goal was to have a system that is comparable with MSE in terms of the precision of the geographical coordinates. We were not able to make a functional IPS as we were unable to retrieve the RSSI from the routers and access points. \Cref{sec:future_system} will function as a guidance and proposal section for how to continue the development of the system.
+First of all we have concluded on our shortcomings from \cref{cha:sprint2}. This was done by making a small update to the intermediate server.
+During this sprint we examined the possibility of building a small tracking system utilising access points. The goal was to have a system that is comparable with MSE in terms of the precision of the geographical coordinates. We were not able to make a functional IPS as we were unable to retrieve the RSSI from the routers and access points. \Cref{sec:futureSystem} will function as a guidance and proposal section for how to continue the development of the system.
 
 We deployed an update for the intermediate service communicating with MSE, fixing several issues and creating support for geographical coordinates opposed to the relative once we got before. The update was successfully installed and deployed.
 
